# alternative

./: .gitignore  .readthedocs.yaml  AGENTS.md  LICENSE  README.md  alternative.py  alternative.pyi  conftest.py  pyproject.toml  test_alternative.py  test_decorator.py  test_get_callsite_path.py  test_packaging.py  test_pytest_util.py
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  conf.py  index.rst  pytest.rst  quickstart.rst  workflow.rst
examples/: test_benchmark.py  test_measure.py
scripts/: pycharm-type-probes.sh
typing_tests/: callable_probes.py  type_probes.py
