[project]
name = "alternative"
version = "0.1.0"
description = "A library to help with the management of alternative implementations of functions"
readme = "README.md"
authors = [
    { name = "Oliver Bristow", email = "evilumbrella+github@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://alternative.readthedocs.io/"
Repository = "https://github.com/Code0x58/alternative"
Issues = "https://github.com/Code0x58/alternative/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "sybil>=9.3.0,<10",
]

[tool.uv]
dev-dependencies = [
    "alternative[dev]",
    "build>=1.2.2",
    "hatchling>=1.27.0",
    "mypy>=2.0.0",
    "pyright>=1.1.407",
    "pyrefly>=0.64.1",
    "ruff>=0.15.12",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv.sources]
alternative = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/alternative.py",
    "/alternative.pyi",
    "/conftest.py",
    "/docs",
    "/examples",
    "/LICENSE",
    "/pyproject.toml",
    "/README.md",
    "/scripts",
    "/test_*.py",
    "/typing_tests",
    "/uv.lock",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "alternative.py",
    "alternative.pyi",
]

[tool.pytest.ini_options]
# do 5 rounds of 0.01 benchmarks, as the benchmarks are examples or very fast
addopts = "--cov=alternative --cov-report=html --benchmark-max-time=0.01"


[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true
